syntax = "proto3";

// Package common.v1 содержит общие типы данных
package common.v1;

option go_package = "github.com/CantDefeatAirmanx/space-engeneering/shared/pkg/proto/common/v1;common_v1";

import "google/protobuf/timestamp.proto";

// Session описывает сессию пользователя
message Session {
    // session_id идентификатор сессии
    string uuid = 1;
    // created_at дата создания сессии
    google.protobuf.Timestamp created_at = 2;
    // updated_at дата обновления сессии
    google.protobuf.Timestamp updated_at = 3;
    // expires_at дата истечения сессии
    google.protobuf.Timestamp expires_at = 4;
}
